2014-01-04  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.target/arm/neon-nested-apcs.c: New test.

2014-01-04  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/59519
	* gcc.dg/vect/pr59519-1.c: New test.
	* gcc.dg/vect/pr59519-2.c: New test.

	* gcc.target/i386/avx512f-vmovdqu32-1.c: Allow vmovdqu64 instead of
	vmovdqu32.

2014-01-04  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/59547
	* gfortran.dg/typebound_proc_32.f90: New.

2014-01-03  Marc Glisse  <marc.glisse@inria.fr>

	PR c++/58950
	* g++.dg/pr58950.C: New file.

2014-01-03  Tobias Burnus  <burnus@net-b.de>

	PR c++/58567
	* g++.dg/gomp/pr58567.C: New.

2014-01-03  Bingfeng Mei  <bmei@broadcom.com>

	PR tree-optimization/59651
	* gcc.dg/torture/pr59651.c: New test.
	* gcc.dg/vect/pr59651.c: Ditto.

2014-01-03  Jakub Jelinek  <jakub@redhat.com>

	PR target/59625
	* gcc.target/i386/pr59625.c: New test.

2014-01-03  Paolo Carlini  <paolo.carlini@oracle.com>

	Core DR 1442
	PR c++/59165
	* g++.dg/cpp0x/range-for28.C: New.
	* g++.dg/cpp0x/range-for3.C: Update.

2014-01-02  Joseph Myers  <joseph@codesourcery.com>

	* gcc.target/powerpc/rs6000-ldouble-3.c: New test.

2014-01-02  Marc Glisse  <marc.glisse@inria.fr>

	PR c++/59641
	* g++.dg/cpp0x/pr59641.C: New file.

2014-01-02  Marc Glisse  <marc.glisse@inria.fr>

	* g++.dg/cpp0x/initlist-explicit-sfinae.C: New file.

2014-01-02  Marc Glisse  <marc.glisse@inria.fr>

	PR c++/59378
	* g++.dg/ext/pr59378.C: New file.

2014-01-02  Richard Sandiford  <rdsandiford@googlemail.com>

	Update copyright years

2014-01-02  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.target/arc/arc.exp: Use the standard form for the copyright
	notice.

2014-01-02  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/59654
	* gfortran.dg/dynamic_dispatch_12.f90: New.

2014-01-01  Jakub Jelinek  <jakub@redhat.com>

	* lib/target-supports.exp (check_effective_target_avx512f): Make sure
	the builtin isn't optimized away as unused.

	PR rtl-optimization/59647